--- a/HitmanStatistics.csproj
+++ b/HitmanStatistics.csproj
@@ -85,6 +85,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cheats\CheatsHitman2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cheats\CheatsHitman2.Designer.cs">
+      <DependentUpon>CheatsHitman2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Metronome.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
     </Compile>
     <Compile Include="SACombination.cs" />
     <Compile Include="Trainer.cs" />
+    <EmbeddedResource Include="Cheats\CheatsHitman2.resx">
+      <DependentUpon>CheatsHitman2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
