--- a/HitmanStatistics.csproj
+++ b/HitmanStatistics.csproj
@@ -91,6 +91,12 @@
     <Compile Include="Cheats\CheatsHitman2.Designer.cs">
       <DependentUpon>CheatsHitman2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Cheats\CheatsHitmanBloodMoney.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cheats\CheatsHitmanBloodMoney.Designer.cs">
+      <DependentUpon>CheatsHitmanBloodMoney.cs</DependentUpon>
+    </Compile>
     <Compile Include="Metronome.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +122,9 @@
     <Compile Include="Trainer.cs" />
     <EmbeddedResource Include="Cheats\CheatsHitman2.resx">
       <DependentUpon>CheatsHitman2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Cheats\CheatsHitmanBloodMoney.resx">
+      <DependentUpon>CheatsHitmanBloodMoney.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
