--- a/HitmanStatistics.csproj
+++ b/HitmanStatistics.csproj
@@ -97,22 +97,22 @@
     <Compile Include="Cheats\CheatsHitmanBloodMoney.Designer.cs">
       <DependentUpon>CheatsHitmanBloodMoney.cs</DependentUpon>
     </Compile>
-    <Compile Include="Hitman2.cs">
+    <Compile Include="Games\Hitman2.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Hitman2.Designer.cs">
+    <Compile Include="Games\Hitman2.Designer.cs">
       <DependentUpon>Hitman2.cs</DependentUpon>
     </Compile>
-    <Compile Include="HitmanContracts.cs">
+    <Compile Include="Games\HitmanContracts.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="HitmanContracts.Designer.cs">
+    <Compile Include="Games\HitmanContracts.Designer.cs">
       <DependentUpon>HitmanContracts.cs</DependentUpon>
     </Compile>
-    <Compile Include="HitmanBloodMoney.cs">
+    <Compile Include="Games\HitmanBloodMoney.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="HitmanBloodMoney.Designer.cs">
+    <Compile Include="Games\HitmanBloodMoney.Designer.cs">
       <DependentUpon>HitmanBloodMoney.cs</DependentUpon>
     </Compile>
     <Compile Include="Metronome.cs">
@@ -122,6 +122,7 @@
       <DependentUpon>Metronome.cs</DependentUpon>
     </Compile>
     <Compile Include="KeyGrabber.cs" />
+    <Compile Include="PaternScan.cs" />
     <Compile Include="Pointer.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -138,6 +139,12 @@
     </Compile>
     <Compile Include="SACombination.cs" />
     <Compile Include="Trainer.cs" />
+    <Compile Include="Initial.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Initial.Designer.cs">
+      <DependentUpon>Initial.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Cheats\CheatsHitman2.resx">
       <DependentUpon>CheatsHitman2.cs</DependentUpon>
     </EmbeddedResource>
@@ -147,14 +154,17 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Hitman2.resx">
+    <EmbeddedResource Include="Games\Hitman2.resx">
       <DependentUpon>Hitman2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HitmanContracts.resx">
+    <EmbeddedResource Include="Games\HitmanContracts.resx">
       <DependentUpon>HitmanContracts.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="HitmanBloodMoney.resx">
+    <EmbeddedResource Include="Games\HitmanBloodMoney.resx">
       <DependentUpon>HitmanBloodMoney.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Initial.resx">
+      <DependentUpon>Initial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Metronome.resx">
       <DependentUpon>Metronome.cs</DependentUpon>
