--- a/HitmanStatistics.csproj
+++ b/HitmanStatistics.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HitmanStatistics</RootNamespace>
     <AssemblyName>HitmanStatisticsUber</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -92,6 +92,10 @@
     <Compile Include="Cheats\CheatsHitman2.Designer.cs">
       <DependentUpon>CheatsHitman2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Cheats\CheatsHitmanContracts.cs" />
+    <Compile Include="Cheats\CheatsHitmanContracts.Designer.cs">
+      <DependentUpon>CheatsHitmanContracts.cs</DependentUpon>
+    </Compile>
     <Compile Include="Games\Hitman2.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -137,6 +141,9 @@
     <EmbeddedResource Include="Cheats\CheatsHitman2.resx">
       <DependentUpon>CheatsHitman2.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Cheats\CheatsHitmanContracts.resx">
+      <DependentUpon>CheatsHitmanContracts.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
