--- a/HitmanStatistics.csproj
+++ b/HitmanStatistics.csproj
@@ -92,7 +92,15 @@
     <Compile Include="Cheats\CheatsHitman2.Designer.cs">
       <DependentUpon>CheatsHitman2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Cheats\CheatsHitmanContracts.cs" />
+    <Compile Include="Cheats\CheatsHitmanCodename47.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cheats\CheatsHitmanCodename47.Designer.cs">
+      <DependentUpon>CheatsHitmanCodename47.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Cheats\CheatsHitmanContracts.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Cheats\CheatsHitmanContracts.Designer.cs">
       <DependentUpon>CheatsHitmanContracts.cs</DependentUpon>
     </Compile>
@@ -142,8 +150,13 @@
       <DependentUpon>CheatsHitman2.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Cheats\CheatsHitmanCodename47.resx">
+      <DependentUpon>CheatsHitmanCodename47.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Cheats\CheatsHitmanContracts.resx">
       <DependentUpon>CheatsHitmanContracts.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
